# yawgbot

./: .env.sample  .gitignore  LICENSE.md  README.md  app.py  bot.py  index.html  iobackuppolostesso.sqlite  pyproject.toml  readme.md  requirements.txt  run_yawgbot.py  web.py  yawgbot.py
src/yawgbot/: app.py  bot.py  index.html  listing.py  pluginBase.py
src/yawgbot/plugins/: wg-gesucht.py
yawgbot/: bot.py  pluginBase.py  yawgbot.py
yawgbot/plugins/: wg-gesucht.py
